--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --port 3001",
+    "dev:testnet": "cross-env CHAIN_ID=336 yarn dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -31,6 +32,7 @@
     "@types/node": "17.0.21",
     "@types/react": "^17.0.40",
     "@types/swagger-ui-react": "^4.1.1",
+    "cross-env": "^7.0.3",
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "jest": "^27.5.1",
