--- a/kagla-api-deploy/package.json
+++ b/kagla-api-deploy/package.json
@@ -15,6 +15,7 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.152.0",
+    "@aws-cdk/aws-certificatemanager": "1.152.0",
     "@aws-cdk/aws-cloudfront": "1.152.0",
     "@aws-cdk/aws-ecs": "1.152.0",
     "@aws-cdk/aws-ecs-patterns": "^1.152.0",
