--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "assign-deep": "^1.0.1",
     "bignumber.js": "^9.0.2",
+    "dayjs": "^1.11.1",
     "ethers": "^5.6.0",
     "next": "12.1.0",
     "next-swagger-doc": "^0.2.1",
